# gomi_clustering

./: Readme.md  classification.py  evaluation.py  gomi_classification_lgbm.py  gomi_config.py  gomi_embedding.py  gomi_evaluation.py  gomi_predict.py  gomi_service.py  gomi_service_zero_shot.py  gomi_service_zero_shot_elasticsearch.py  import_to_elasticsearch.py  models.py  plot_frequency.py  plot_pca.py  plot_tsne.py  predict.py  pyproject.toml  time.sh
elasticsearch/: start_elasticsearch.sh  stop_elasticserach.sh
