[tool.poetry]
name = "gomi-clustering"
version = "0.1.0"
description = ""
authors = ["aoda"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.28.0"
numpy ="^1.25"
scikit-learn ="^1.3"
matplotlib = "^3.8"
japanize-matplotlib = "^1.1.3"
pandas = "^2.1"
seaborn = "^0.12"
lightgbm = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
